examples/compiler_errors/adversarial/type_and_effect_modules/EffectBroken.flx
// expect: compile_error
// expect-error: E400

module EffectBroken {
    fn noisy() -> Unit {
        print("hi")
    }
}
